--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+:root {
+  --primary-light: "#2A9D8F";
+  --primary-main: "#264653";
+  --primary-dark: "#001f2a";
+  --primary-contrast-text: "#ffffff";
+  --secondary-light: "#ffa07d";
+  --secondary-main: "#e86f50";
+  --secondary-dark: "#b14026";
+  --secondary-contrast-text: "#000000";
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
