menu : disable links when no log files

--- a/src/components/layout/AppDrawer.css
+++ b/src/components/layout/AppDrawer.css
@@ -3,6 +3,16 @@
   color: white;
 }
 
+.disabled-link {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.disabled-link .ListItemIcon__style > svg{
+  background-color: #AAAAAA;
+  color: white
+}
+
 .Drawer__style > .MuiDrawer-paper {
   border-right: none;
 }
