filters: refactor/move the filters in one folder
Add the version, improve the menu close (icon are always displayed)

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,7 @@
 // app global css in SCSS form
 h4 {
-  margin-top: 10px;
-  margin-left: 20px;
-  margin-bottom: 16px;
+  margin-top: 6px;
+  margin-left: 10px;
+  margin-bottom: 6px;
+  font-size: 24px;
 }
